tests/NormalTests/paczka2/big_fuzzy/60564458.err
Error in line 4: lDnc S666 78,9
Error in line 9: aMEpYx A34 69,7
Error in line 7: qFOj5Iw S666 73,3
Error in line 11: qFOj5Iw A264 28,4
Error in line 8: lDnc A264 87,4
Error in line 23: aMEpYx S666 78,3
Error in line 17: lDnc S666 77,0
Error in line 14: m1RSQJ1hX A34 83,6
Error in line 43: m1RSQJ1hX S666 46,8
Error in line 51: qFOj5Iw A386 34,6
Error in line 54: lDnc A264 46,4
Error in line 59: 5JiZIK A34 20,4
Error in line 58: qFOj5Iw A264 32,0
Error in line 61: m1RSQJ1hX A34 167,8
Error in line 70: s4r A386 30,9
Error in line 78: aMEpYx A34 97,4
Error in line 85: qFOj5Iw A34 20,0
Error in line 95: s4r A264 36,9
Error in line 100: qFOj5Iw A386 113,8
Error in line 108: 5JiZIK A386 75,2
Error in line 122: qFOj5Iw A386 40,2
Error in line 126: A264 A34 39,2
Error in line 134: 5JiZIK A34 80,3
Error in line 132: qFOj5Iw A34 29,2
Error in line 138: s4r A386 73,4
Error in line 143: 5JiZIK S666 40,89
Error in line 145: 5JiZIK S666 24,1
Error in line 139: aMEpYx A264 95,6
Error in line 148: qFOj5Iw A264 79,1
Error in line 157: s4r A386 97,2
Error in line 171: A264 A34 10,8
Error in line 177: 5JiZIK A386 54,5
Error in line 189: 5JiZIK A34 21,5
Error in line 194: lDnc S666 17,7
Error in line 200: s4r A34 92,4
Error in line 214: aMEpYx A264 &3,8
Error in line 221: aMEpYx A264 17,7
Error in line 226: lDnc S666 97,48
Error in line 232: 5JiZIK A34 
Error in line 233: 5,8
Error in line 230: 5JiZIK A34 18,9
Error in line 227: A264 A264 24,2
Error in line 234: 5JiZIK S666 39,3
Error in line 228: lDnc S666 411,7
